[gd_scene load_steps=4 format=3 uid="uid://b1iw3egpl1ewb"]

[ext_resource type="Script" path="res://scripts/ui/select_crop.gd" id="1_xpeob"]
[ext_resource type="Texture2D" uid="uid://d1gvaj32cmamc" path="res://assets/old/Crops/wheat/wheat_04.png" id="2_dpxkd"]
[ext_resource type="Texture2D" uid="uid://b003fdccm57ox" path="res://assets/old/Crops/pumkin/pumpkin_04.png" id="3_7jhij"]

[node name="CropVSplitContainer" type="VSplitContainer"]
offset_right = 88.0
offset_bottom = 87.0
script = ExtResource("1_xpeob")

[node name="currentCropVSplitContainer" type="VSplitContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="currentCropHSplitContainer" type="HSplitContainer" parent="currentCropVSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="currentCropSprite" type="TextureRect" parent="currentCropVSplitContainer/currentCropHSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_dpxkd")
expand_mode = 2
stretch_mode = 5

[node name="currentSpriteCount" type="Label" parent="currentCropVSplitContainer/currentCropHSplitContainer"]
layout_mode = 2
text = "0"

[node name="displayCropsButton" type="Button" parent="currentCropVSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "\\/"

[node name="selectCropHSplitContainer" type="HSplitContainer" parent="."]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="selectWheatButton" type="Button" parent="selectCropHSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("2_dpxkd")
icon_alignment = 1
expand_icon = true

[node name="selectPumpkinButton" type="Button" parent="selectCropHSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("3_7jhij")
icon_alignment = 1
expand_icon = true
